<b>Glitch kernel for flo</b>

- Based on CyanogenMod 3.4.0 kernel source for MSM devices
- CPU OC up to 2.3Ghz and undervolt support (using for example TricksterMod or FauxClock) - Default is 1512MHz
- CPU governors : Faux's intellidemand, interactive, ondemand
- I/O schedulers: noop, deadline, row, cfq, fiops, sio
- Boosted L2/bus speed
- GPU OC up to 627 MHz (available max frequencies : 128/200/320/450/487/504/545/600/627 MHz) - Default is 450 MHz
- Faux Simple GPU governor support
- Showp1984's msm_mpdecision hotplug driver
- Sweep2wake/Sweep2sleep/Doubletap2wake support
- Magnetic on/off 
- Supercurio's Color calibrator support
- Fsync on/off support
- FauxSound support
- USB fast charging support
- Default read-ahead buffer set to 1024
- Msm thermal enhancements
- Optimized algorithms
- NTFS and exFAT support
- Aroma installer to set core features at flash time
- Compiled with latest SaberMod 4.8.x toolchain
