@@ -95,6 +95,27 @@ if
 endif;
 
 if
+   file_getprop("/tmp/aroma/ble.prop","selected.0") == "1"
+     then
+   ui_print("default charge voltage");
+endif;
+if
+   file_getprop("/tmp/aroma/ble.prop","selected.0") == "2"
+     then
+   ui_print("4.2V charge voltage");
+endif;
+if
+   file_getprop("/tmp/aroma/ble.prop","selected.0") == "3"
+     then
+   ui_print("4.1V charge voltage");
+endif;
+if
+   file_getprop("/tmp/aroma/ble.prop","selected.0") == "4"
+     then
+   ui_print("4.0V charge voltage");
+endif;
+
+if
     file_getprop("/tmp/aroma/mods.prop","item.0.1") == "1"
 then
     ui_print("Sweep2wake enabled");
